--- a/templates/chatroom/landing.html
+++ b/templates/chatroom/landing.html
@@ -7,5 +7,5 @@
     <input type="submit" value="send">
 </form>
 
-<script src="/chat-landing.js"></script>
+<script src="/bundle.js"></script>
 {{ template "footer" }}
