--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,8 @@
         <p>Yay!</p>
         <p>So landing page!</p>
     </div>
+    <div>
+        <a href="/chatroom">To Chatroom</a>
+    </div>
 </div>
 {{ template "footer" }}
