--- a/client/src/styles/chatroom.scss
+++ b/client/src/styles/chatroom.scss
@@ -21,22 +21,45 @@ html {
 
     &>.messages {
         flex-grow: 1;
-        overflow-x: hidden;
-        overflow-y: scroll;
-        padding-bottom: 0.5rem;
+        overflow: hidden;
 
-        &::-webkit-scrollbar {
-            width: 10px;
+        display: flex;
+        flex-direction: column;
+
+        position: relative;
+
+        .content {
+            flex-grow: 1;
+            overflow-x: hidden;
+            overflow-y: scroll;
+
+            &::-webkit-scrollbar {
+                width: 10px;
+            }
+
+            &::-webkit-scrollbar-track {
+                background: #fff;
+                border-radius: 10px;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background: #888;
+                border-radius: 10px;
+            }
         }
 
-        &::-webkit-scrollbar-track {
-            background: #fff;
-            border-radius: 10px;
-        }
+        .float {
+            position: absolute;
+            right: 20px;
+            bottom: 20px;
 
-        &::-webkit-scrollbar-thumb {
-            background: #888;
-            border-radius: 10px;
+            display: flex;
+            align-content: center;
+            align-items: center;
+            justify-content: center;
+
+            cursor: pointer;
+            user-select: none;
         }
     }
 
@@ -47,7 +70,7 @@ html {
     }
 }
 
-.message:not(:last-child) {
+.message-piece:not(:last-child) {
     margin-bottom: $margin/2;
 }
 
